kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-network
  namespace: homework
  labels:
    theme: kubernetes-network
spec:
  replicas: 3
  selector:
    matchLabels:
      type: nginx-homework
  template:
    metadata:
      labels:
        type: nginx-homework
        theme: kubernetes-network
    spec:
      nodeSelector:
          homework: "true"
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8000
          name: hw-nginx-port
        readinessProbe:
          httpGet:
            path: /index.html
            port: hw-nginx-port
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 10
        volumeMounts:
        - name: shared
          mountPath: /homework
        - name: nginx-conf
          mountPath: /etc/nginx
        lifecycle:
          preStop:
            exec:
              command: [ "/bin/sh", "-c", "rm /homework/index.html" ]
      volumes:
      - name: shared
        emptyDir: {}
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
