kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip
  namespace: homework
  labels:
    theme: kubernetes-network
spec:
  selector:
    type: nginx-homework
    theme: kubernetes-network
  ports:
    - name: http
      port: 80
      targetPort: hw-nginx-port
